# DocuGuard-Knowledge-Hub

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  docker-build.yml  docs.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: health.py  query.py
backend/app/connectors/: confluence_client.py
backend/app/db/: base.py  models.py
backend/app/rag/: chunker.py  embedder.py  generator.py  pipeline.py  retriever.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline_schema.py  0002_document_permissions.py
backend/tests/: test_health.py  test_migrations.py  test_query.py
docs/: architecture-6ed935c4-df4d-49ef-a9de-5cd1c25f46c2.md  evaluation-6ed935c4-df4d-49ef-a9de-5cd1c25f46c2.md  features-6ed935c4-df4d-49ef-a9de-5cd1c25f46c2.md  prd-6ed935c4-df4d-49ef-a9de-5cd1c25f46c2.md  stories-6ed935c4-df4d-49ef-a9de-5cd1c25f46c2.md  tasks-6ed935c4-df4d-49ef-a9de-5cd1c25f46c2.md
docs/design/: connector-architecture.md  connector-research-and-design-summary.md  document-permission-api.md
docs/developer/: ci-cd-pipeline.md  code-quality-rules.md  migration-framework.md  testing-guidelines.md
docs/guides/: installation-guide.md
docs/research/: connector-api-research.md  document-level-permissions-research.md
docs/roadmaps/: document-permissions-v2-roadmap.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.json
infra/: docker-compose.dev.yml  docker-compose.yml
(+12 files in other folders)
